HouseHogPackage/main/default/objects/Realtor__c/Realtor__c.object-meta.xml
<CustomObject>
    <description>Proxy object for realtor users.</description>
    <label>Realtor</label>
    <nameField>
        <displayFormat>Realtor-{00000}</displayFormat>
        <label>Realtor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Realtors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>