HouseHogPackage/main/default/objects/Realtor__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agency that the realtor is affiliated with.</description>
    <label>Agency</label>
    <referenceTo>Agency__c</referenceTo>
    <relationshipLabel>Realtors</relationshipLabel>
    <relationshipName>Realtors</relationshipName>
    <type>Lookup</type>
</CustomField>