HouseHogPackage/main/default/objects/Realtor__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Realtor&apos;s primary phone number.</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>